--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,10 +1,12 @@
 .projects-grid {
-    margin: 24px;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 16px;
     justify-items: stretch;
 
+}
+.body{
+    padding: 24px;
 }
 .projects-card{
     min-width: 250px;
