--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,16 @@
     height: 200px;
     margin: auto;
 }
+.add-button{
+    border-width: 1px;
+    border: solid;
+    background-color: var(--mantine-color-blue-light);
+    border-color: var(--mantine-primary-color-filled);
+    border-radius: 0.5rem;
+    text-align: center;
+    padding-top: calc(25% - 0.75em);
+    font-size: 2rem;
+}
 a{
     text-decoration: none;
 }
