--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -22,8 +22,10 @@
     border-color: var(--mantine-primary-color-filled);
     border-radius: 0.5rem;
     text-align: center;
-    padding-top: calc(25% - 0.75em);
     font-size: 2rem;
+}
+.projects-card-add{
+    padding-top: calc(200px / 2 - 1em);
 }
 a{
     text-decoration: none;
